2025-03-12  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Prevent get_line() when parsing module name.
	Report and patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004166.html).

2025-03-12  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Parse and reject verbatim in TeX part.
	Report and patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004169.html).

2025-03-11  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Prevent integer overflow in scan_numeric().
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004165.html).

2025-03-10  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Reject strings as macro names.
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004163.html).

2025-03-10  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch,
	* tangleboot.pin: Change case for letters only.
	Report and initial patch from Benjamin Gray
	(https://tug.org/pipermail/tex-k/2025-March/004161.html).

2025-02-01  Karl Berry  <karl@freefriends.org>

	* tex.ch (24.336): comment out this patch for interactive deletion
	of \outer tokens, since it has the undesirable side effect of
	deleting through eof.
	* tests/outerdel.tex,
	* tests/outerdelsub.tex: test files and info.

	* tex.ch (save_arith_error): declare in Glob...
	(30.568): save and restore arith_error around the new
	check for font scaling to >= 2048pt.

2025-01-29  Andreas Scherer  <https://ascherer.github.io>

	* bibtex.ch,
	* dvicopy.ch,
	* dvitype.ch,
	* gftodvi.ch,
	* gftopk.ch,
	* gftype.ch,
	* mft.ch,
	* patgen.ch,
	* pktogf.ch,
	* pktype.ch,
	* pltotf.ch,
	* pooltype.ch,
	* tftopl.ch,
	* vftovp.ch,
	* vptovf.ch: Fill a few gaps in the '@x' lines.

2025-01-28  Karl Berry  <karl@freefriends.org>

	* dvitype.ch: run tests/fix-changefile-lines.py to get chapter and
	line numbers, and update module numbers.
